Fixed Layout issues

--- a/css/layout.css
+++ b/css/layout.css
@@ -108,7 +108,7 @@ header {
 /* ------------------------------------------------------------------ */
 
 #about {
-	height: 275px;
+	height: 350px;
 	padding: 25px 25px 10px 25px;
 	background: #ff5d5d;
 }
@@ -116,12 +116,12 @@ header {
 #about > #left-col{
 	float: left;
 	position: center;
-	width: 20%;
+	width: 30%;
 }
 
 #about > #right-col{
 	float: right;
-	width: 80%;
+	width: 70%;
 	font-weight: 700;
 }
 
@@ -250,7 +250,7 @@ header {
 .nav-contact {
 	padding-top: 40px;
 	float: right;
-	width: 87%;
+	width: 80%;
 	text-align: left;
 }
 
